added html and css files

--- a/index.html
+++ b/index.html
@@ -11,6 +11,38 @@
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <div class="main">
+    <div class="navbar">
+        <div class="icon">
+            <h3 class="logo">Gobblin' Dice</h3>
+            <ul>
+                <li><a class="active" href="#home">Home</a></li>
+                <li><a href="#news">News</a></li>
+                <li><a href="#contact">Contact</a></li>
+                <li style="float:right"><a href="#about">About</a></li>
+             </ul>
+            </div>
+            <div class="table">
+            </div>
+        </div>
+        <div class="table">
+            <table>
+                <tr>
+                    <th>Table Header</th>
+                </tr>
+                <tr>
+                    <td>Table cell</td>
+                    <td>Table cell</td>
+                    <td>Table cell</td>
+                </tr>
+                <tr>
+                    <td>Table cell</td>
+                    <td>Table cell</td>
+                    <td>Table cell</td>
+                </tr>
+             </table>  
+             
+        </div>
+</div>
 </body>
 </html>
