--- a/login.html
+++ b/login.html
@@ -4,8 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Log In Page</title>
+    <link rel="stylesheet" href="styles/login.css">
 </head>
 <body>
-    
+    <div class="wrapper">
+        <form action="">
+            <h1>Login</h1>
+            <div class="input-box">
+                <label for="email">Email
+                    <input type="text" placeholder="enter your email" required>
+                </label>
+            </div> <br> 
+            <div class="input-box">
+                <label for="password">Password
+                    <input type="password" placeholder="enter your password">
+                </label>
+            </div> <br>
+            <div>
+                <button class="btn">Login</button>
+            </div>
+        </form>
+    </div>
+</body>
+</html>
 </body>
 </html>
